# edgejs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: napi-wasmer.yml  test-and-build.yml
benchmarks/: README.md  capture-edge-startup-profile.mjs  run.sh
napi-external/guest/tests/: manifest.json
napi-external/host/src/: lib.rs  napi_bridge_init.cc
napi-v8/: CMakeLists.txt  README.md
napi-v8/build-local-v8/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
napi-v8/build-local-v8/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  napi_v8_tier1_tests
napi-v8/include/: js_native_api.h  js_native_api_types.h  napi_v8_platform.h  node_api.h  node_api_types.h
napi-v8/scripts/: test-local-v8.sh
napi-v8/src/: js_native_api_v8.cc  napi_v8_platform.cc  node_api_v8.cc  unofficial_napi_request_gc_for_testing.cc
napi-v8/src/internal/: napi_v8_env.h
napi-v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md  README.md  tier1_ported_runner.cc
napi-v8/tests/runners/: test_10_number.cc  test_11_constructor.cc  test_13_symbol.cc  test_14_exception.cc  test_16_reference.cc  test_19_properties.cc  test_21_general.cc  test_28_node_instance_data.cc  test_2_function_arguments.cc  test_35_promise.cc  test_39_cannot_run_js.cc  test_3_callbacks.cc  test_40_pending_exception.cc  test_4_object_factory.cc  test_5_function_factory.cc  test_6_object_wrap.cc  test_7_factory_wrap.cc  test_8_passing_wrapped.cc
napi/include/: unofficial_napi.h
napi/v8/: CMakeLists.txt
napi/v8/cmake/: NapiV8Resolver.cmake
napi/v8/src/: js_native_api_v8.cc  unofficial_napi.cc  unofficial_napi_contextify.cc  unofficial_napi_error_utils.cc  unofficial_napi_error_utils.h
napi/wasmer/: Cargo.toml  build.rs
napi/wasmer/native/edge/: edge_napi_embedder_hooks.cc  edge_napi_embedder_hooks.h
napi/wasmer/native/v8/: src
napi/wasmer/src/: cli.rs  ctx.rs  lib.rs  main.rs  napi_bridge_init.cc  snapi.rs
napi/wasmer/src/guest/: mod.rs  napi.rs
napi/wasmer/tests/: build-test-native.sh  manifest_tests.rs
scripts/: build-wasix.sh  framework-test.js
src/: edge_cli.cc  edge_compat_exec.cc  edge_module_loader.cc  edge_process.cc  edge_runtime.cc  edge_timers_host.cc  edge_util.cc  wasix_compat.cc
ubi/: CMakeLists.txt  README.md  ROADMAP.md  TEST_STRATEGY.md
ubi/scripts/: check_internal_binding_dispatch.py  dedupe_gtest_manifest.py  test-local-v8.sh
ubi/src/: builtin_catalog.cc  node_api.cc  ubi_active_resource.cc  ubi_active_resource.h  ubi_async_wrap.cc  ubi_async_wrap.h  ubi_buffer.cc  ubi_buffer.h  ubi_cares_wrap.cc  ubi_cares_wrap.h  ubi_cli.cc  ubi_cli.h  ubi_crypto.cc  ubi_crypto.h  ubi_encoding.cc  ubi_encoding.h  ubi_encoding_ids.h  ubi_errors_binding.cc  ubi_fs.cc  ubi_fs.h  ubi_http_parser.cc  ubi_http_parser.h  ubi_js_stream.cc  ubi_main.cc  ubi_module_loader.cc  ubi_module_loader.h  ubi_node_addon_compat.h  ubi_node_compat.cc  ubi_option_helpers.h  ubi_os.cc  ubi_os.h  ubi_path.cc  ubi_pipe_wrap.cc  ubi_pipe_wrap.h  ubi_process.cc  ubi_process.h  ubi_process_wrap.cc  ubi_process_wrap.h  ubi_runtime.cc  ubi_runtime.h  (+32 more)
ubi/src/builtins/: async_hooks.js  child_process.js  crypto.js  domain.js  events.js  fs.js  os.js  perf_hooks.js  repl.js  test.js  tls.js  worker_threads.js
ubi/src/builtins/internal/: async_hooks.js  options.js  promise_hooks.js
ubi/src/builtins/internal/bootstrap/: internal_binding.js
ubi/src/builtins/internal/perf/: observe.js
ubi/src/builtins/internal/readline/: callbacks.js
ubi/src/builtins/internal/v8/: startup_snapshot.js
ubi/src/crypto/: ubi_crypto_binding.cc  ubi_crypto_binding.h
ubi/src/internal_binding/: binding_async_wrap.cc  binding_buffer.cc  binding_builtins.cc  binding_cares_wrap.cc  binding_config.cc  binding_constants.cc  binding_contextify.cc  binding_credentials.cc  binding_crypto.cc  binding_encoding_binding.cc  binding_fs.cc  binding_fs_dir.cc  binding_fs_event_wrap.cc  binding_http_parser.cc  binding_icu.cc  binding_messaging.cc  binding_mksnapshot.cc  binding_module_wrap.cc  binding_os.cc  binding_pipe_wrap.cc  binding_process_methods.cc  binding_process_wrap.cc  binding_report.cc  binding_signal_wrap.cc  binding_spawn_sync.cc  binding_stream_wrap.cc  binding_string_decoder.cc  binding_symbols.cc  binding_tcp_wrap.cc  binding_timers.cc  binding_tty_wrap.cc  binding_types.cc  binding_udp_wrap.cc  binding_url.cc  binding_url_pattern.cc  binding_util.cc  binding_worker.cc  dispatch.cc  dispatch.h  helpers.h
ubi/tests/: CMakeLists.txt
ubi/tests/fixtures/: phase0_hello.js
ubi/tests/node-compat/: FS_IMPLEMENTATION_PLAN.md  NEXT_STEPS_RAW.md
ubi/tests/node-compat/common/: assert.js  child_process.js  countdown.js  gc.js  index.js  shared-lib-util.js  udp.js
ubi/tests/node-compat/fixtures/: fs_sync_test.js
ubi/tests/node-compat/parallel/: test-os-checked-function.js  test-os-constants-signals.js  test-os-fast.js  test-os.js
ubi/tests/runners/: test_0_runtime_phase01.cc  test_1_cli_phase01.cc  test_2_module_loader_phase02.cc  test_3_node_dropin_subset_phase02.cc  test_4_internal_binding_dispatch_phase02.cc  test_5_internal_binding_parity_phase03.cc
unode/: CMakeLists.txt  README.md  ROADMAP.md
unode/scripts/: test-local-v8.sh
unode/src/: node_api.cc  unode_cares_wrap.cc  unode_cares_wrap.h  unode_cli.cc  unode_cli.h  unode_fs.cc  unode_http_parser.cc  unode_http_parser.h  unode_main.cc  unode_module_loader.cc  unode_module_loader.h  unode_node_api.h  unode_os.cc  unode_os.h  unode_pipe_wrap.cc  unode_pipe_wrap.h  unode_process.cc  unode_process_wrap.cc  unode_process_wrap.h  unode_runtime.cc  unode_runtime.h  unode_spawn_sync.cc  unode_spawn_sync.h  unode_stream_wrap.cc  unode_stream_wrap.h  unode_string_decoder.cc  unode_tcp_wrap.cc  unode_tcp_wrap.h  unode_udp_wrap.cc  unode_udp_wrap.h  unode_util.cc  unode_util.h  unofficial_napi_testing_until_gc.cc
unode/src/builtins/: _http_agent.js  _http_client.js  _http_common.js  _http_incoming.js  _http_outgoing.js  _http_server.js  assert.js  async_hooks.js  buffer.js  (+23 more)
unode/tests/: CMakeLists.txt
(+80 files in other folders)
