[package]
name = "napi_wasmer"
version = "0.1.0"
description = "NAPI library for Wasmer WebAssembly runtime"
edition = "2024"

resolver = "2"

[features]
wasix = ["dep:tokio"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true}

wasmer = { version = "=7.1.0-rc.2" }

[build-dependencies]
cc = "1"
tar = "0.4"
ureq = "2"
xz = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
